--- a/feature-account-api/src/main/res/values/attrs.xml
+++ b/feature-account-api/src/main/res/values/attrs.xml
@@ -8,5 +8,7 @@
     <declare-styleable name="AddressInputField">
 
         <attr name="android:hint" />
+
+        <attr name="hasExternalAccountIdentifiers" format="boolean"/>
     </declare-styleable>
 </resources>
