--- a/feature-assets/src/main/res/layout/fragment_select_send.xml
+++ b/feature-assets/src/main/res/layout/fragment_select_send.xml
@@ -131,6 +131,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
+        android:hint="@string/send_address_hint"
         app:hasExternalAccountIdentifiers="true" />
 
     <io.novafoundation.nova.feature_wallet_api.presentation.view.amount.ChooseAmountView
