--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -388,6 +388,14 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            android:id="@+id/action_mainFragment_to_walletConnectGraph"
+            app:destination="@id/wallet_connect_nav_graph"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
     <fragment
@@ -1116,4 +1124,6 @@
         android:id="@+id/rebagFragment"
         android:name="io.novafoundation.nova.feature_staking_impl.presentation.bagList.rebag.RebagFragment"
         android:label="RebagFragment" />
+
+    <include app:graph="@navigation/wallet_connect_nav_graph" />
 </navigation>
