--- a/feature-account-impl/src/main/res/layout/fragment_profile.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_profile.xml
@@ -64,6 +64,13 @@
                 app:title="@string/profile_accounts_title_2_0" />
 
             <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsItemView
+                android:id="@+id/settingsWalletConnect"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/ic_buy_outline"
+                app:title="@string/wallet_connect_title" />
+
+            <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsItemView
                 android:id="@+id/settingsNetworks"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
