--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -144,6 +144,22 @@
         app:popEnterAnim="@anim/fragment_close_enter"
         app:popExitAnim="@anim/fragment_close_exit" />
 
+    <action
+        android:id="@+id/action_open_referenda_search"
+        app:destination="@id/referenda_search_graph"
+        app:enterAnim="@anim/fragment_open_enter"
+        app:exitAnim="@anim/fragment_open_exit"
+        app:popEnterAnim="@anim/fragment_close_enter"
+        app:popExitAnim="@anim/fragment_close_exit" />
+
+    <action
+        android:id="@+id/action_open_referenda_filters"
+        app:destination="@id/referenda_filters_graph"
+        app:enterAnim="@anim/fragment_open_enter"
+        app:exitAnim="@anim/fragment_open_exit"
+        app:popEnterAnim="@anim/fragment_close_enter"
+        app:popExitAnim="@anim/fragment_close_exit" />
+
     <fragment
         android:id="@+id/mainFragment"
         android:name="io.novafoundation.nova.app.root.presentation.main.MainFragment"
@@ -1111,6 +1127,10 @@
     <include app:graph="@navigation/delegation_nav_graph" />
 
     <include app:graph="@navigation/your_delegations_nav_graph" />
+
+    <include app:graph="@navigation/referenda_search_graph" />
+
+    <include app:graph="@navigation/referenda_filters_graph" />
 
     <fragment
         android:id="@+id/rebagFragment"
