--- a/feature-governance-impl/src/main/res/layout/item_referenda_group.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referenda_group.xml
@@ -12,11 +12,11 @@
 
     <TextView
         android:id="@+id/itemReferendaGroupStatus"
-        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
+        style="@style/TextAppearance.NovaFoundation.Regular.Body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:includeFontPadding="false"
-        android:textColor="@color/text_secondary"
+        android:textColor="@color/text_primary"
         tools:text="Active" />
 
     <TextView
