--- a/feature-external-sign-impl/src/main/res/layout/fragment_confirm_sign_extrinsic.xml
+++ b/feature-external-sign-impl/src/main/res/layout/fragment_confirm_sign_extrinsic.xml
@@ -4,96 +4,117 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:background="@color/bottom_sheet_background">
+    tools:background="@color/secondary_screen_background">
 
-    <Space
+    <io.novafoundation.nova.common.view.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:dividerVisible="false"
+        android:id="@+id/confirmSignExtinsicToolbar"
+        app:homeButtonVisible="false"
+        app:titleText="@string/common_sign_request" />
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1">
 
-    <ImageView
-        android:id="@+id/confirmSignExtinsicIcon"
-        style="@style/Widget.Nova.Icon.Big"
-        android:layout_marginTop="20dp"
-        tools:src="@drawable/ic_earth" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/confirmSignExtinsicTitle"
-        style="@style/TextAppearance.NovaFoundation.SemiBold.Title3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:gravity="center_horizontal"
-        android:text="@string/common_confirm_title"
-        android:textColor="@color/text_primary" />
+            <ImageView
+                android:id="@+id/confirmSignExtinsicIcon"
+                style="@style/Widget.Nova.Icon.Big"
+                android:layout_marginTop="24dp"
+                tools:src="@drawable/ic_earth" />
 
-    <TextView
-        android:id="@+id/confirmSignExtinsicSubTitle"
-        style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:gravity="center_horizontal"
-        android:text="@string/dapp_confirm_sign_extrinsic_subtitle"
-        android:textColor="@color/text_secondary" />
+            <TextView
+                android:id="@+id/confirmSignExtinsicTitle"
+                style="@style/TextAppearance.NovaFoundation.SemiBold.Title3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:gravity="center_horizontal"
+                android:text="@string/common_confirm_title"
+                android:textColor="@color/text_primary" />
 
-    <io.novafoundation.nova.common.view.TableCellView
-        android:id="@+id/confirmSignExtinsicWallet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        app:title="@string/tabbar_wallet_title" />
+            <TextView
+                android:id="@+id/confirmSignExtinsicSubTitle"
+                style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:text="@string/dapp_confirm_sign_extrinsic_subtitle"
+                android:textColor="@color/text_secondary" />
 
-    <io.novafoundation.nova.common.view.TableCellView
-        android:id="@+id/confirmSignExtinsicAccount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:title="@string/common_account_address" />
+            <io.novafoundation.nova.common.view.TableView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp">
 
-    <io.novafoundation.nova.common.view.TableCellView
-        android:id="@+id/confirmSignExtinsicNetwork"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:title="@string/common_network" />
+                <io.novafoundation.nova.common.view.TableCellView
+                    android:id="@+id/confirmSignExtinsicDappUrl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:title="@string/dapp_dapp" />
+            </io.novafoundation.nova.common.view.TableView>
 
-    <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
-        android:id="@+id/confirmSignExtinsicFee"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:title="@string/common_network" />
+            <io.novafoundation.nova.common.view.TableView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp">
 
-    <io.novafoundation.nova.common.view.GoNextView
-        android:id="@+id/confirmSignExtinsicDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/transaction_details_title"
-        android:textAppearance="@style/GoNextTransactionDetailsTextAppearance"
-        app:actionIcon="@drawable/ic_chevron_right"
-        app:dividerVisible="false" />
+                <io.novafoundation.nova.common.view.TableCellView
+                    android:id="@+id/confirmSignExtinsicWallet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:title="@string/tabbar_wallet_title" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+                <io.novafoundation.nova.common.view.TableCellView
+                    android:id="@+id/confirmSignExtinsicAccount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:title="@string/common_account_address" />
+
+                <io.novafoundation.nova.common.view.TableCellView
+                    android:id="@+id/confirmSignExtinsicNetwork"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:title="@string/common_network" />
+
+                <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
+                    android:id="@+id/confirmSignExtinsicFee"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:title="@string/common_network" />
+
+            </io.novafoundation.nova.common.view.TableView>
+
+            <io.novafoundation.nova.common.view.GoNextView
+                android:id="@+id/confirmSignExtinsicDetails"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/transaction_details_title"
+                android:textAppearance="@style/GoNextTransactionDetailsTextAppearance"
+                app:actionIcon="@drawable/ic_chevron_right"
+                app:dividerVisible="false"
+                tools:background="@color/block_background" />
+        </LinearLayout>
+
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal">
 
         <io.novafoundation.nova.common.view.PrimaryButton
