--- a/feature-account-impl/src/main/res/layout/fragment_profile.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_profile.xml
@@ -110,6 +110,13 @@
             android:layout_height="wrap_content">
 
             <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsSwitcherView
+                android:id="@+id/settingsBiometricAuth"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/ic_android_fingerprint"
+                app:title="@string/profile_settings_biometric_auth_title" />
+
+            <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsSwitcherView
                 android:id="@+id/settingsPinCodeVerification"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
