--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -152,6 +152,14 @@
         app:popEnterAnim="@anim/fragment_close_enter"
         app:popExitAnim="@anim/fragment_close_exit" />
 
+    <action
+        android:id="@+id/action_open_scanWalletConnect"
+        app:destination="@id/walletConnectScanFragment"
+        app:enterAnim="@anim/fragment_open_enter"
+        app:exitAnim="@anim/fragment_open_exit"
+        app:popEnterAnim="@anim/fragment_close_enter"
+        app:popExitAnim="@anim/fragment_close_exit" />
+
     <fragment
         android:id="@+id/mainFragment"
         android:name="io.novafoundation.nova.app.root.presentation.main.MainFragment"
@@ -1136,4 +1144,9 @@
     <include app:graph="@navigation/wallet_connect_nav_graph" />
 
     <include app:graph="@navigation/external_sign_graph" />
+
+    <fragment
+        android:id="@+id/walletConnectScanFragment"
+        android:name="io.novafoundation.nova.feature_wallet_connect_impl.presentation.scan.WalletConnectScanFragment"
+        android:label="WalletConnectScanFragment" />
 </navigation>
