--- a/feature-staking-impl/src/main/res/layout/fragment_period_staking.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_period_staking.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/stakingRoot"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/drawable_background_image">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
