--- a/feature-staking-impl/src/main/res/layout/fragment_period_staking.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_period_staking.xml
@@ -13,7 +13,7 @@
         android:paddingBottom="72dp">
 
         <io.novafoundation.nova.common.view.Toolbar
-            android:id="@+id/stackingPeriodToolbar"
+            android:id="@+id/stakingPeriodToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:dividerVisible="false"
@@ -27,70 +27,70 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:text="@string/stacking_period_title"
+            android:text="@string/staking_period_title"
             android:textColor="@color/text_primary" />
 
         <RadioGroup
-            android:id="@+id/stackingPeriodGroup"
+            android:id="@+id/stakingPeriodGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp">
 
             <RadioButton
-                android:id="@+id/allTimeStackingPeriod"
+                android:id="@+id/allTimeStakingPeriod"
                 style="@style/Widget.Nova.RadioButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="12dp"
-                android:text="@string/stacking_period_all_time" />
+                android:text="@string/staking_period_all_time" />
 
             <RadioButton
-                android:id="@+id/weekStackingPeriod"
+                android:id="@+id/weekStakingPeriod"
                 style="@style/Widget.Nova.RadioButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="12dp"
-                android:text="@string/stacking_period_week" />
+                android:text="@string/staking_period_week" />
 
             <RadioButton
-                android:id="@+id/monthStackingPeriod"
+                android:id="@+id/monthStakingPeriod"
                 style="@style/Widget.Nova.RadioButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="12dp"
-                android:text="@string/stacking_period_month" />
+                android:text="@string/staking_period_month" />
 
             <RadioButton
-                android:id="@+id/quarterStackingPeriod"
+                android:id="@+id/quarterStakingPeriod"
                 style="@style/Widget.Nova.RadioButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="12dp"
-                android:text="@string/stacking_period_quarter" />
+                android:text="@string/staking_period_quarter" />
 
             <RadioButton
-                android:id="@+id/halfYearStackingPeriod"
+                android:id="@+id/halfYearStakingPeriod"
                 style="@style/Widget.Nova.RadioButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="12dp"
-                android:text="@string/stacking_period_half_year" />
+                android:text="@string/staking_period_half_year" />
 
             <RadioButton
-                android:id="@+id/yearStackingPeriod"
+                android:id="@+id/yearStakingPeriod"
                 style="@style/Widget.Nova.RadioButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="12dp"
-                android:text="@string/stacking_period_year" />
+                android:text="@string/staking_period_year" />
 
             <RadioButton
-                android:id="@+id/customStackingPeriod"
+                android:id="@+id/customStakingPeriod"
                 style="@style/Widget.Nova.RadioButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="12dp"
-                android:text="@string/stacking_period_custom" />
+                android:text="@string/staking_period_custom" />
         </RadioGroup>
 
         <LinearLayout
@@ -100,32 +100,32 @@
             android:orientation="vertical">
 
             <io.novafoundation.nova.common.view.TableCellView
-                android:id="@+id/customStackingPeriodStart"
+                android:id="@+id/customStakingPeriodStart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="16dp"
                 app:dividerVisible="false"
                 app:primaryValueIcon="@drawable/ic_chevron_right"
                 app:primaryValueIconTint="@color/icon_accent"
-                app:title="@string/stacking_period_start_title" />
+                app:title="@string/staking_period_start_title" />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
-                android:id="@+id/customStackingPeriodAlwaysToday"
+                android:id="@+id/customStakingPeriodAlwaysToday"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="16dp"
-                android:text="@string/stacking_period_current_date_title"
+                android:text="@string/staking_period_current_date_title"
                 android:textColor="@color/text_secondary" />
 
             <io.novafoundation.nova.common.view.TableCellView
-                android:id="@+id/customStackingPeriodEnd"
+                android:id="@+id/customStakingPeriodEnd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="16dp"
                 app:dividerVisible="false"
                 app:primaryValueIcon="@drawable/ic_chevron_right"
                 app:primaryValueIconTint="@color/icon_accent"
-                app:title="@string/stacking_period_end_title" />
+                app:title="@string/staking_period_end_title" />
 
         </LinearLayout>
     </LinearLayout>
