--- a/feature-staking-impl/src/main/res/layout/view_user_rewards.xml
+++ b/feature-staking-impl/src/main/res/layout/view_user_rewards.xml
@@ -34,15 +34,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
-                android:text="@string/staking_period_all_short"
+                android:paddingStart="8dp"
+                android:paddingEnd="4dp"
                 android:textAllCaps="false"
                 android:textColor="@color/button_text_accent"
                 app:chipIconSize="16dp"
                 app:iconEnd="@drawable/ic_chevron_down"
+                app:iconEndPadding="0dp"
                 app:iconEndTint="@color/icon_accent"
                 app:layout_constraintBottom_toBottomOf="@+id/userRewardsTitle"
                 app:layout_constraintStart_toEndOf="@+id/userRewardsTitle"
-                app:layout_constraintTop_toTopOf="@+id/userRewardsTitle" />
+                app:layout_constraintTop_toTopOf="@+id/userRewardsTitle"
+                tools:text="@string/staking_period_all_short" />
 
             <TextView
                 android:id="@+id/userRewardsTokenAmount"
