--- a/common/src/main/res/layout/view_toolbar.xml
+++ b/common/src/main/res/layout/view_toolbar.xml
@@ -38,7 +38,7 @@
         android:layout_gravity="center_vertical|end"
         android:layout_marginEnd="9dp"
         android:padding="8dp"
-        app:tint="@color/icon_primary"
+        app:tint="@color/icon_primary_state_colors"
         android:src="@drawable/ic_info_24"
         android:visibility="gone" />
 
