--- a/feature-account-impl/src/main/res/layout/pincode_view.xml
+++ b/feature-account-impl/src/main/res/layout/pincode_view.xml
@@ -94,7 +94,7 @@
             android:id="@+id/fingerprintBtn"
             style="@style/Widget.Nova.Button.PinCodeControlButton"
             android:layout_margin="@dimen/pin_code_view_spacing"
-            android:src="@drawable/ic_fingerprint"
+            android:src="@drawable/ic_authentication"
             android:tint="@color/icon_primary"
             android:visibility="invisible"
             tools:visibility="visible" />
