--- a/feature-account-impl/src/main/res/layout/pincode_view.xml
+++ b/feature-account-impl/src/main/res/layout/pincode_view.xml
@@ -91,7 +91,7 @@
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/fingerprintBtn"
+            android:id="@+id/biometricBtn"
             style="@style/Widget.Nova.Button.PinCodeControlButton"
             android:layout_margin="@dimen/pin_code_view_spacing"
             android:src="@drawable/ic_authentication"
