--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -77,9 +77,10 @@
         <attr name="dividerVisible" />
         <attr name="primaryValueIcon" format="reference|color" />
         <attr name="primaryValueStyle" format="enum">
-            <enum name="text" value="0" />
-            <enum name="link" value="1" />
-            <enum name="positive" value="2" />
+            <enum name="primary" value="0" />
+            <enum name="secondary" value="1" />
+            <enum name="link" value="2" />
+            <enum name="positive" value="3" />
         </attr>
         <attr name="titleValueTextAppearance" format="reference" />
         <attr name="primaryValueTextAppearance" format="reference" />
