--- a/app/src/main/res/navigation/bottom_nav_graph.xml
+++ b/app/src/main/res/navigation/bottom_nav_graph.xml
@@ -25,8 +25,8 @@
 
     <fragment
         android:id="@+id/stakingFragment"
-        tools:layout="@layout/fragment_staking"
-        android:name="io.novafoundation.nova.feature_staking_impl.presentation.staking.main.StakingFragment"
+        tools:layout="@layout/fragment_staking_dashboard"
+        android:name="io.novafoundation.nova.feature_staking_impl.presentation.dashboard.main.StakingDashboardFragment"
         android:label="StakingFragment" />
 
     <fragment
