--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="TextAppearance.NovaFoundation.SemiBold.Title3.Primary">
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
     <style name="TextAppearance.NovaFoundation.SemiBold.Caps">
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">10sp</item>
@@ -39,6 +43,10 @@
         <item name="lineHeight">18sp</item>
     </style>
 
+    <style name="TextAppearance.NovaFoundation.SemiBold.Footnote.Primary">
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
     <style name="TextAppearance.NovaFoundation.SemiBold.SubHeadline">
         <item name="android:textSize">?attr/textSizeSubHeadline</item>
     </style>
@@ -60,6 +68,10 @@
         <item name="android:letterSpacing">0.05</item>
     </style>
 
+    <style name="TextAppearance.NovaFoundation.Bold.Caps.Primary">
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
     <style name="TextAppearance.NovaFoundation.Bold.LargeTitle">
         <item name="android:textSize">34sp</item>
     </style>
@@ -70,6 +82,10 @@
 
     <style name="TextAppearance.NovaFoundation.Bold.Title2">
         <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="TextAppearance.NovaFoundation.Bold.Title2.Primary">
+        <item name="android:textColor">@color/text_primary</item>
     </style>
 
     <style name="TextAppearance.NovaFoundation.Bold.Title3">
@@ -140,6 +156,10 @@
 
     <style name="TextAppearance.NovaFoundation.Regular.SubHeadline.Primary">
         <item name="android:textColor">@color/text_primary</item>
+    </style>
+
+    <style name="TextAppearance.NovaFoundation.Regular.SubHeadline.Secondary">
+        <item name="android:textColor">@color/text_secondary</item>
     </style>
 
     <style name="TextAppearance.NovaFoundation.Title3" parent="TextAppearance.NovaFoundation.Regular">
