--- a/common/src/main/res/layout/item_operation_list_item.xml
+++ b/common/src/main/res/layout/item_operation_list_item.xml
@@ -51,7 +51,6 @@
         style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
         android:ellipsize="middle"
         android:singleLine="true"
         android:textColor="@color/text_primary"
@@ -65,12 +64,19 @@
         style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:textColor="@color/text_secondary"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/itemOperationValueRightSpace"
         app:layout_constraintTop_toBottomOf="@+id/itemOperationValuePrimary"
         tools:text="22:36" />
+
+    <Space
+        android:id="@+id/itemOperationValueRightSpace"
+        android:layout_width="16dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/itemOperationValueStatus"
@@ -78,7 +84,7 @@
         android:layout_height="16dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/itemOperationValuePrimary"
-        app:layout_constraintEnd_toEndOf="@+id/itemOperationValueSecondary"
+        app:layout_constraintEnd_toStartOf="@+id/itemOperationValueRightSpace"
         app:layout_constraintTop_toTopOf="@+id/itemOperationValuePrimary"
         tools:src="@drawable/ic_time_16" />
 
