--- a/feature-staking-impl/src/main/res/layout/fragment_staking_dashboard.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_staking_dashboard.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/stakingDashboardContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/drawable_background_image"
-    android:id="@+id/stakingDashboardContent"
-    android:paddingBottom="64dp"
     android:clipToPadding="false"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-</androidx.recyclerview.widget.RecyclerView>
+    android:paddingBottom="64dp"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
