--- a/common/src/main/res/layout/item_placeholder.xml
+++ b/common/src/main/res/layout/item_placeholder.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <io.novafoundation.nova.common.view.PlaceholderView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/referendaPlaceholder"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemPlaceholder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="16dp"
-    android:text="@string/referenda_list_placeholder"
-    app:image="@drawable/ic_placeholder"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent" />
+    app:layout_constraintStart_toStartOf="parent"
+    tools:string="@string/referenda_list_placeholder" />
