--- a/app/src/main/res/navigation/bottom_nav_graph.xml
+++ b/app/src/main/res/navigation/bottom_nav_graph.xml
@@ -23,11 +23,8 @@
         android:name="io.novafoundation.nova.feature_dapp_impl.presentation.main.MainDAppFragment"
         android:label="CrowdloanFragment" />
 
-    <fragment
-        android:id="@+id/stakingFragment"
-        tools:layout="@layout/fragment_staking_dashboard"
-        android:name="io.novafoundation.nova.feature_staking_impl.presentation.dashboard.main.StakingDashboardFragment"
-        android:label="StakingFragment" />
+
+    <include app:graph="@navigation/staking_dashboard_graph"  />
 
     <fragment
         android:id="@+id/walletFragment"
