--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -15,6 +15,10 @@
         <item name="android:textColor">@color/text_primary</item>
     </style>
 
+    <style name="TextAppearance.NovaFoundation.SemiBold.Callout">
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="TextAppearance.NovaFoundation.SemiBold.Caps">
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">10sp</item>
