--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -244,4 +244,10 @@
         <attr name="iconEndPadding" format="dimension" />
     </declare-styleable>
 
+    <declare-styleable name="ParalaxCardView_Layout">
+        <attr name="layout_cardBackgroundColor" format="color" />
+        <attr name="layout_cardBorderColor" format="color" />
+        <attr name="layout_strokeWidth" format="dimension" />
+        <attr name="layout_cardRadius" format="dimension" />
+    </declare-styleable>
 </resources>
